# gnuplot_kernel

./: .coveragerc  .gitignore  .travis.yml  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  how-to-release.rst  postBuild  pyproject.toml  pytest.ini  requirements_dev.txt  setup.cfg  setup.py
.github/workflows/: release.yml  testing.yml
examples/: gnuplot-kernel.ipynb  gnuplot-magic.ipynb
gnuplot_kernel/: __init__.py  __main__.py  exceptions.py  kernel.py  replwrap.py  utils.py
gnuplot_kernel/images/: logo.gp
gnuplot_kernel/magics/: __init__.py  gnuplot_magic.py  reset_magic.py
gnuplot_kernel/tests/: conftest.py  test_kernel.py  utils.py
src/gnuplot_kernel/: __init__.py  __main__.py  exceptions.py  kernel.py  replwrap.py  statement.py  utils.py
src/gnuplot_kernel/magics/: __init__.py  gnuplot_magic.py  reset_magic.py
tests/: conftest.py  test_kernel.py
tools/: release-checklist-tpl.md  release-checklist.py
