[metadata]
name = gnuplot_kernel
description = A gnuplot kernel for Jupyter
url= https://github.com/has2k1/gnuplot_kernel
license = BSD (3-clause)
author = Hassan Kibirige
author_email = has2k1@gmail.com
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Framework :: IPython
    Intended Audience :: End Users/Desktop
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Visualization
    Topic :: System :: Shells

project_urls =
    Source = https://github.com/has2k1/gnuplot_kernel
    Bug Tracker = https://github.com/has2k1/gnuplot_kernel/issues
    CI = https://github.com/has2k1/gnuplot_kernel/actions

[options]
packages = find:
install_requires =
    metakernel>=0.29.0
    notebook>=6.5.0
python_requires = >=3.8
zip_safe = False

[options.package_data]
gnuplot.images = *.png

[options.extras_require]
test =
    flake8
    pytest-cov

[bdist_wheel]

[flake8]
ignore = E121,E123,E126,E226,E24,E704,W503,W504,E741,E743
